--- a/prime_home/templates/prime_home/index/services_section.html
+++ b/prime_home/templates/prime_home/index/services_section.html
@@ -5,7 +5,7 @@
     <div class="container"> 
         <div class="align-items-center mb-3 row"> 
             <div class="col-xl-3 pb-4 pt-4"> 
-                <h2 class="h5 text-danger">What We Do</h2> 
+                <h2 class="h5 text-favorite">What We Do</h2> 
                 <h3 class="h2 mb-4">Our services</h3> 
                 <a class="btn btn-danger pl-4 pr-4 rounded-pill" href="#">Learn More</a> 
             </div>                     
@@ -14,41 +14,13 @@
                     <div class="col-lg-4 col-md-6 pb-3 pt-3"> 
                         <div class="border border-secondary pb-5 pl-4 pr-4 pt-5">
                             <div class="pl-3 pr-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" width="40" height="40" class="mb-3 text-danger">
-                                    <g>
-                                        <path fill="none" d="M0 0h24v24H0z"/>
-                                        <path d="M17 21H7A6 6 0 0 1 5.008 9.339a7 7 0 1 1 13.984 0A6 6 0 0 1 17 21zm0-12a5 5 0 1 0-9.994.243l.07 1.488-1.404.494A4.002 4.002 0 0 0 7 19h10a4 4 0 1 0-3.796-5.265l-1.898-.633A6.003 6.003 0 0 1 17 9z"/>
-                                    </g>
-                                </svg>
-                                <h4>Cloud Applications</h4>
-                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae congue tortor.</p>
-                            </div>                                     
-                        </div>                                 
-                    </div>                             
-                    <div class="col-lg-4 col-md-6 pb-3 pt-3"> 
-                        <div class="border border-secondary pb-5 pl-4 pr-4 pt-5">
-                            <div class="pl-3 pr-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40" fill="currentColor" class="mb-3 text-danger"> 
-                                    <g>
-                                        <path fill="none" d="M0 0h24v24H0z"/>
-                                        <path d="M6.75 2.5A4.25 4.25 0 0 1 11 6.75V11H6.75a4.25 4.25 0 1 1 0-8.5zM9 9V6.75A2.25 2.25 0 1 0 6.75 9H9zm-2.25 4H11v4.25A4.25 4.25 0 1 1 6.75 13zm0 2A2.25 2.25 0 1 0 9 17.25V15H6.75zm10.5-12.5a4.25 4.25 0 1 1 0 8.5H13V6.75a4.25 4.25 0 0 1 4.25-4.25zm0 6.5A2.25 2.25 0 1 0 15 6.75V9h2.25zM13 13h4.25A4.25 4.25 0 1 1 13 17.25V13zm2 2v2.25A2.25 2.25 0 1 0 17.25 15H15z"/>
-                                    </g>                                             
-                                </svg>
-                                <h4>Saas Applications</h4>
-                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae congue tortor.</p>
-                            </div>                                     
-                        </div>                                 
-                    </div>
-                    <div class="col-lg-4 col-md-6 pb-3 pt-3"> 
-                        <div class="border border-secondary pb-5 pl-4 pr-4 pt-5">
-                            <div class="pl-3 pr-3">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40" fill="currentColor" class="mb-3 text-danger"> 
                                     <g>
                                         <path fill="none" d="M0 0h24v24H0z"/>
                                         <path d="M5 8v12h14V8H5zm0-2h14V4H5v2zm15 16H4a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h16a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1zM7 10h4v4H7v-4zm0 6h10v2H7v-2zm6-5h4v2h-4v-2z"/>
-                                    </g>                                             
+                                    </g>     
                                 </svg>
-                                <h4>Single-page Apps</h4>
+                                <h4>Learn Korean</h4>
                                 <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae congue tortor.</p>
                             </div>                                     
                         </div>                                 
@@ -62,39 +34,11 @@
                                         <path d="M15 3c.552 0 1 .448 1 1v2h5c.552 0 1 .448 1 1v13c0 .552-.448 1-1 1H3c-.552 0-1-.448-1-1V7c0-.552.448-1 1-1h5V4c0-.552.448-1 1-1h6zm1 5H8v11h8V8zM4 8v11h2V8H4zm10-3h-4v1h4V5zm4 3v11h2V8h-2z"/>
                                     </g>                                             
                                 </svg>
-                                <h4>Enterprise Appications</h4>
+                                <h4>Work in South Korea</h4>
                                 <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae congue tortor.</p>
                             </div>                                     
                         </div>                                 
                     </div>
-                    <div class="col-lg-4 col-md-6 pb-3 pt-3"> 
-                        <div class="border border-secondary pb-5 pl-4 pr-4 pt-5">
-                            <div class="pl-3 pr-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40" fill="currentColor" class="mb-3 text-danger"> 
-                                    <g>
-                                        <path fill="none" d="M0 0h24v24H0z"/>
-                                        <path d="M4 16V4H2V2h3a1 1 0 0 1 1 1v12h12.438l2-8H8V5h13.72a1 1 0 0 1 .97 1.243l-2.5 10a1 1 0 0 1-.97.757H5a1 1 0 0 1-1-1zm2 7a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm12 0a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"/>
-                                    </g>                                             
-                                </svg>
-                                <h4>Ecommerce Applications</h4>
-                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae congue tortor.</p>
-                            </div>                                     
-                        </div>                                 
-                    </div>
-                    <div class="col-lg-4 col-md-6 pb-3 pt-3"> 
-                        <div class="border border-secondary pb-5 pl-4 pr-4 pt-5">
-                            <div class="pl-3 pr-3">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="40" height="40" fill="currentColor" class="mb-3 text-danger"> 
-                                    <g>
-                                        <path fill="none" d="M0 0h24v24H0z"/>
-                                        <path d="M7 4v16h10V4H7zM6 2h12a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1zm6 15a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-                                    </g>                                             
-                                </svg>
-                                <h4>Mobile Applications</h4>
-                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae congue tortor.</p>
-                            </div>                                     
-                        </div>                                 
-                    </div>                             
                 </div>                         
             </div>                     
         </div>                 
