--- a/prime_home/templates/prime_home/index/testimonies_section.html
+++ b/prime_home/templates/prime_home/index/testimonies_section.html
@@ -75,5 +75,8 @@ id="testimonies">
             </div>
         </div>
     </div>
+    <div class="pb-4 pt-4 text-center">
+        <a style="color: white;" class="btn primary-color pl-4 pr-4 rounded-pill" href="{{url_for('prime_home.testimonies')}}">View More</a>
+    </div>
 </div>
 </section>
