--- a/prime_home/templates/prime_home/navigation_header.html
+++ b/prime_home/templates/prime_home/navigation_header.html
@@ -40,15 +40,8 @@ class="nav-background border border-left-0 border-right-0 border-top-0 navbar na
                     Us</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link px-lg-3 py-lg-4 dropdown-toggle" href="#" id="navbarDropdownMenuLink"
-                    role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Branches</a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item">Cebu</a>
-                    <a class="dropdown-item">Tacloban</a>
-                    <a class="dropdown-item">Calbayog</a>
-                    <a class="dropdown-item">Bohol</a>
-                    <a class="dropdown-item">Palawan</a>
-                </div>
+                <a class="nav-link px-lg-3 py-lg-4" id="btn_branches"
+                role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Branches</a>
             </li>
         </ul>
         <!-- <a class="btn btn-light ml-lg-auto pl-4 pr-4 rounded-pill" href="#">Log In</a> -->
