--- a/prime_home/templates/prime_home/index/contact_us_section.html
+++ b/prime_home/templates/prime_home/index/contact_us_section.html
@@ -8,9 +8,9 @@
                         <h3 class="display-4 fw-bold mb-5 text-dark">Want to study korean language?</h3>
                         <h4 class="mb-3 text-dark">Visit us at</h4>
                         <p>
-9056 Fairground Ave.<br>
-Dearborn, MI 48124<br>
-United States of America</p>
+address<br>
+address<br>
+address</p>
                         <h4 class="mb-3 text-dark">Connect at</h4>
                         <ul class="list-unstyled mb-0"> 
                             <li class="mb-1"> 
