feat: add organization and about page

--- a/prime_home/templates/prime_home/base.html
+++ b/prime_home/templates/prime_home/base.html
@@ -28,8 +28,10 @@
 
 <body class="text-secondary">
     <!-- HEADER -->
-    {% include "prime_home/navigation_header.html" %}
-    
+    {% block header %}
+        {% include "prime_home/navigation_header.html" %}
+    {% endblock %}
+
     <!-- Block Content -->
     {% block content %}{% endblock %}
 
