--- a/prime_home/templates/prime_home/footer.html
+++ b/prime_home/templates/prime_home/footer.html
@@ -45,15 +45,6 @@
                     <li class="mb-3">
                         <a href="#" class="text-white">Organization</a>
                     </li>
-                    <li class="mb-3">
-                        <a href="#" class="text-white">Advisor</a>
-                    </li>
-                    <li class="mb-3">
-                        <a href="#" class="text-white">Become an Affiliate</a>
-                    </li>
-                    <li class="mb-3">
-                        <a href="#" class="text-white">Our Portfolio</a>
-                    </li>
                 </ul>
             </div>
             <div class="col-sm-4 col-xl-2 py-3">
@@ -65,26 +56,11 @@
                     <li class="mb-3">
                         <a href="#" class="text-white">Work in South Korea</a>
                     </li>
-                    <li class="mb-3">
-                        <a href="#" class="text-white">Lorem Ipsum</a>
-                    </li>
-                    <li class="mb-3">
-                        <a href="#" class="text-white">Lorem Ipsum</a>
-                    </li>
-                    <li class="mb-3">
-                        <a href="#" class="text-white">Lorem Ipsum</a>
-                    </li>
                 </ul>
             </div>
             <div class="col-sm-4 col-xl-2 py-3">
                 <h5 class="mb-4 text-uppercase text-white-50">Other</h5>
                 <ul class="list-unstyled">
-                    <li class="mb-3">
-                        <a href="#" class="text-white">Success Stories</a>
-                    </li>
-                    <li class="mb-3">
-                        <a href="#" class="text-white">Learning</a>
-                    </li>
                     <li class="mb-3">
                         <a href="#" class="text-white">Licence</a>
                     </li>
@@ -99,7 +75,7 @@
         </div>
         <div class="pb-3 pt-3 text-center">
             <hr class="border-secondary mt-0">
-            <p class="mb-0">Copyright &copy; 2021 Company Name</p>
+            <p class="mb-0">Copyright &copy; Prime Language and Tech. Center Inc.</p>
         </div>
     </div>
 </footer>
