--- a/prime_home/templates/prime_home/index/talk_section.html
+++ b/prime_home/templates/prime_home/index/talk_section.html
@@ -8,7 +8,7 @@ xmlns="http://www.w3.org/2000/svg" class="primary-color d-block text-light" widt
         <div class="col-lg-7 order-lg-2 pb-5 pl-lg-5 pt-5">
             <h5>Learn Korean with us</h5>
             <h2 class="h1 mb-4">What job do you want in korea?</h2>
-            <a class="btn btn-outline-light pl-4 pr-4 rounded-pill" href="#">Let&apos;s Talk</a>
+            <a href="{{url_for('prime_home.contact_us')}}" class="btn btn-outline-light pl-4 pr-4 rounded-pill">Let&apos;s Talk</a>
         </div>
         <div class="col-lg-5 order-lg-1">
             <svg xmlns="http://www.w3.org/2000/svg" width="1120.661" height="897.38"
