--- a/prime_home/templates/prime_home/branches_page.html
+++ b/prime_home/templates/prime_home/branches_page.html
@@ -1,5 +1,10 @@
 {% extends 'prime_home/base.html' %}
 
+
+{% block header %}
+    {% include "prime_home/navigation_header_2.html" %}
+{% endblock %}
+
 {% block content %}
 <section class="primary-color pt-5 text-white">
     <div class="container mb-4 py-5">
@@ -60,7 +65,6 @@
         <div class="gy-5 row">
             <div class="col-xl-9 mx-auto">
             <h2 class="text-favorite h1 mb-4 text-center">PALAWAN</h2>
-                <img src="{{url_for('prime_home.static', filename='img/palawan_1.jpg')}}" class="img-fluid mb-3 rounded-3" alt="Sample image" width="1280" height="720"/>
                 <p text-center>3rd floor, Yusay incorporated building,Lacao st. puerto princesa city, palawan</p>
                 <div data-aos="zoom-in" data-aos-duration="5000" class="container">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d955.0893969315338!2d118.74038254933042!3d9.740430123977106!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x33b563ddd19c6223%3A0xd8eaa3581acb22f7!2sYusay%20Credit%20and%20Finance%20Corporation!5e0!3m2!1sen!2sph!4v1635731513508!5m2!1sen!2sph" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -68,5 +72,12 @@
         </div>                     
     </div>                 
 </section>
+
+
+<!-- Talk Section -->
+{% include "prime_home/index/talk_section.html" %}
+<!--End Of Talk Section-->
+
+{% include "prime_home/footer.html" %}
 
 {% endblock %}
