--- a/prime_admin/templates/lms/add_expenses_modal.html
+++ b/prime_admin/templates/lms/add_expenses_modal.html
@@ -34,7 +34,7 @@
                                         <label for="category" class="">Category</label>
                                         <select name="category" id="category" class="form-control" required>
                                             <option value="">Choose...</option>
-                                            <option value="utilities">Utilities (Rental, Electric, Water, Telco, Transpo)</option>
+                                            <option value="utilities">Utilities</option>
                                             <option value="office_supply">Office Supply</option>
                                             <option value="salary_and_rebates">Salary and Rebates</option>
                                             <option value="other_expenses">Other Expenses</option>
@@ -45,7 +45,19 @@
                                     </div>
                                 </div>
                             </div>
-
+                            <div class="form-row">
+                                <div class="col-md-12">
+                                    <div class="position-relative form-group">
+                                        <label id="label_description" for="description" class="">Description</label>
+                                        <select name="description" id="description" class="form-control" required>
+                                            <option value="">Choose category first...</option>
+                                        </select>
+                                        <div class="invalid-feedback">
+                                            Please provide a valid value
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="form-row">
                                 <div class="col-md-6">
                                     <div class="position-relative form-group"><label for="account_no"
@@ -58,10 +70,23 @@
                                                 Please provide an account no.
                                             </div>
                                 </div>
-                                <div class="col-md-6">
-                                    <div class="position-relative form-group"><label for="billing_month"
-                                            class="">Billing Month</label><input name="billing_month" id="billing_month"
-                                            type="text" class="form-control" required>
+                                <div class="col-md-3">
+                                    <div class="position-relative form-group"><label for="billing_month_from"
+                                            class="">Billing Month</label>
+                                            <input name="billing_month_from" id="billing_month_from"
+                                            type="date" class="form-control" required>
+                                            <div class="valid-feedback">
+                                                Looks good!
+                                            </div>
+                                            <div class="invalid-feedback">
+                                                Please provide a valid billing month
+                                            </div></div>
+                                </div>
+                                <div class="col-md-3">
+                                    <div class="position-relative form-group"><label for="billing_month_to"
+                                            class="">Billing Month</label>
+                                            <input name="billing_month_to" id="billing_month_to"
+                                            type="date" class="form-control" required>
                                             <div class="valid-feedback">
                                                 Looks good!
                                             </div>
@@ -70,7 +95,44 @@
                                             </div></div>
                                 </div>
                             </div>
-                            
+                            <div class="form-row">
+                                <div class="col-md-4">
+                                    <div class="position-relative form-group"><label for="total_amount_due"
+                                            class="">Qty</label>
+                                            <input required id="qty" placeholder="Quantity" step="1" type="number" name="qty" class="form-control">
+                                            <div class="valid-feedback">
+                                                Looks good!
+                                            </div>
+                                            <div class="invalid-feedback">
+                                                Please provide a valid qty
+                                            </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="position-relative form-group"><label for="total_amount_due"
+                                            class="">Unit Price</label>
+                                            <input required id="unit_price" placeholder="Price" step="1" type="number" name="unit_price" class="form-control">
+                                            <div class="valid-feedback">
+                                                Looks good!
+                                            </div>
+                                            <div class="invalid-feedback">
+                                                Please provide a valid price
+                                            </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="position-relative form-group"><label for="total_amount_due"
+                                            class="">Total Amount Due</label>
+                                            <input required id="total_amount_due" placeholder="Amount" step="1" type="number" name="total_amount_due" class="form-control">
+                                            <div class="valid-feedback">
+                                                Looks good!
+                                            </div>
+                                            <div class="invalid-feedback">
+                                                Please provide a valid amount
+                                            </div>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="form-row">
                                 <div class="col-md-6">
                                     <div class="position-relative form-group"><label for="settled_by"
@@ -85,21 +147,6 @@
                                             </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <div class="position-relative form-group"><label for="total_amount_due"
-                                            class="">Total Amount Due</label>
-                                            <input required id="total_amount_due" placeholder="Amount" step="1" type="number" name="total_amount_due" class="form-control">
-                                            <div class="valid-feedback">
-                                                Looks good!
-                                            </div>
-                                            <div class="invalid-feedback">
-                                                Please provide a valid amount
-                                            </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="form-row">
-                                <div class="col-md-12">
                                     <div class="position-relative form-group"><label for="remarks"
                                             class="">Remarks</label><input name="remarks" id="remarks"
                                             type="text" class="form-control" required>
@@ -108,10 +155,12 @@
                                                 Looks good!
                                             </div>
                                             <div class="invalid-feedback">
-                                                Please provide a remark
+                                                Please provide a remarks
                                             </div>
                                 </div>
+                         
                             </div>
+
                         </div>
                     </div>
                     <script>
