feat: Remove Cash in  then call sales automatic pre-deposit

--- a/prime_admin/templates/lms/buy_items.html
+++ b/prime_admin/templates/lms/buy_items.html
@@ -98,7 +98,7 @@
                                 <td>{{item.maintaining}}</td>
                                 <td>{{item.description}}</td>
                                 <td>
-                                    <input name="price_{{item.id}}" style="font-weight: bold;" type="number"
+                                    <input readonly name="price_{{item.id}}" style="font-weight: bold;" type="number"
                                         class="form-control price" value="{{item.price}}">
                                 </td>
                                 <td>
