--- a/prime_admin/templates/lms/cash_on_hand.html
+++ b/prime_admin/templates/lms/cash_on_hand.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="page-title-actions">
-                {% if current_user.role.name == "Secretary" %}
+                <!-- {% if current_user.role.name == "Secretary" %}
                 <button type="button" data-toggle="modal" data-target="#mdl_pre_deposit" data-placement="bottom"
                     class="btn-shadow mr-3 btn btn-primary">
                     <i class="fa fa-plus"></i> Cash In
@@ -37,7 +37,7 @@
                     data-placement="bottom" class="btn-shadow mr-3 btn btn-primary">
                     <i class="fa fa-minus"></i> Cash Out
                 </button>
-                {% endif %}
+                {% endif %} -->
 
                 <div class="d-inline-block dropdown">
                     <button type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
